--- a/host/admin.html
+++ b/host/admin.html
@@ -27,6 +27,7 @@
 					document.body.append(await render_load_plugin());
 					document.body.append(await render_send_message());
 					document.body.append(await render_host_sync_controls());
+					document.body.append(await render_v2_science());
 					document.body.append(await render_uploaded_files_list());
 					document.body.append(await render_commands_list());
 					document.body.append(await render_api_endpoints());
