--- a/host/settings.html
+++ b/host/settings.html
@@ -123,6 +123,8 @@
 					)));
 				}
 
+				document.body.append(await render_uploaded_files_list());
+
 				document.body.append(create_card(join_components(
 					create_heading(1, "Current tracking data"),
 					localStorage.getItem("allow_tracking") === "true" ? from_html("<div id='tracking_data'><p>Please wait...</p></div>") : create_text("Tracking is disabled."),
