--- a/host/settings.html
+++ b/host/settings.html
@@ -122,7 +122,7 @@
 						})
 					)));
 
-					document.body.append(await render_uploaded_files_list());
+					document.body.append(await render_uploaded_files_list(false));
 				}
 
 
